--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Mar  6 13:08:18 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/dialogs/gadgets-beast.xml: move piano roll toolbar onto the
+	piano roll notebook page. provide notebook page labels.
+
 Sat Mar  6 12:15:06 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstapp.c: removed device monitor. added wave file control
