--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Mar  6 13:50:42 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstpreferences.c: load fallback keytable if ~/.beast
+	contains none.
+
+	* library/keys/keyrc.us: added US keymap.
+
 Sat Mar  6 13:08:18 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/dialogs/gadgets-beast.xml: move piano roll toolbar onto the
