--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-03-07  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-03-03  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation by
