--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+- work around "/opt/bin/beast-0.6.1: relocation error: /opt/bin/beast-0.6.1: undefined symbol: _gtk_window_activate_key" with gtk+-2.4
 - make VIew/Rebuild --devel or -:d only
 - provide "+"/"-" buttons for "path" property editors with own tooltips
 - fix continue_after_deletion in gslwavetool.c for i==n_chunks-1
